# blog

./: .gitmodules  LICENSE  Makefile  README.md  pelicanconf.py  publishconf.py  tasks.py
comment-server/: Dockerfile  app.py  base.Dockerfile  pyproject.toml
comments/: ethernaut-15-naughtcoin.md  telefono-cool.md  tengo-comentarios-v1.md  updates-to-solhint-community-versioning.md  vine-con-una-bici-pinon-fijo-a-la-cordillera-y-te-lo-muestro.md
content/: 128km.rst  2019-06-12-so-i-made-a-blog.rst  2019-06-14-too-dumb-to-read-the-documentation-intercept-system-calls-instead.rst  2020-05-02-i-made-another-hip-pack.rst  2020-06-20-why-restructuredtext.rst  2020-08-13-i-didnt-brick-my-gps-yet.rst  2020-08-14-i-bought-a-gps.rst  2020-08-23-lets-try-seamly-2d.rst  2020-08-30-guess-who-made-another-hip-pack.rst  2020-09-12-yet-another-rant-about-why-unix-rocks.rst  2020-09-29-hice-un-bolsito-pero-para-la-espalda.rst  2020-10-02-updates-to-this-website.rst  2020-10-04-bolso-diferente.rst  2020-10-10-nuevas-formas-de-seguir-este-blog.rst  2020-11-24-ahora-si-plagie-bien-a-chrome.rst  2020-12-02-hot-dog-bag.rst  2020-12-13-feed-bag.rst  2021-01-02-tool-roll.rst  2021-01-06-adicion-pagina-mis-bicis.rst  2021-01-08-speaker-harness.rst  2021-01-11-hip-bag-version-whatever.rst  2021-01-28-messenger-delfi.rst  2021-04-22-butchered-phone-pouch.rst  2021-05-08-dinamo-bag.rst  2021-05-23-gonzas-bike.rst  2021-05-30-chill-machine.rst  2021-06-28-miren-awesome-bicis.rst  2021-07-05-128km.rst  2021-07-09-mar-chiquita.rst  2021-07-16-new-license-who-dis.rst  2021-07-26-primer-remada.rst  (+100 more)
(+16 files in other folders)
