[tool.poetry]
name = "capusblog-comment-server"
version = "0.1.0"
description = ""
authors = ["capu <hi@capu.tech>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
